[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/urizen_tiles.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://sprites/healthbar.png" type="Texture" id=3]

[sub_resource type="TileSet" id=1]
0/name = "Enemies"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 652, 2, 648, 414 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 24, 24 )
0/autotile/spacing = 2
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Player"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 2, 236, 648, 102 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 24, 24 )
1/autotile/spacing = 2
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "terrain_01"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 2, 106, 492, 102 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 24, 24 )
2/autotile/spacing = 2
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "buildings"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 652, 418, 648, 76 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 24, 24 )
3/autotile/spacing = 2
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "wizardy_things"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 652, 626, 544, 24 )
4/tile_mode = 2
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 24, 24 )
4/autotile/spacing = 2
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "terrain_02"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 2, 626, 518, 76 )
5/tile_mode = 2
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 24, 24 )
5/autotile/spacing = 2
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "animals_n_resources"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 2, 340, 648, 258 )
6/tile_mode = 2
6/autotile/icon_coordinate = Vector2( 0, 0 )
6/autotile/tile_size = Vector2( 24, 24 )
6/autotile/spacing = 2
6/autotile/occluder_map = [  ]
6/autotile/navpoly_map = [  ]
6/autotile/priority_map = [  ]
6/autotile/z_index_map = [  ]
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "fire"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 2, 860, 232, 24 )
7/tile_mode = 2
7/autotile/icon_coordinate = Vector2( 0, 0 )
7/autotile/tile_size = Vector2( 24, 24 )
7/autotile/spacing = 2
7/autotile/occluder_map = [  ]
7/autotile/navpoly_map = [  ]
7/autotile/priority_map = [  ]
7/autotile/z_index_map = [  ]
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "scrolls_n_treasure"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 652, 652, 310, 50 )
8/tile_mode = 2
8/autotile/icon_coordinate = Vector2( 0, 0 )
8/autotile/tile_size = Vector2( 24, 24 )
8/autotile/spacing = 2
8/autotile/occluder_map = [  ]
8/autotile/navpoly_map = [  ]
8/autotile/priority_map = [  ]
8/autotile/z_index_map = [  ]
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "books"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 2, 756, 102, 24 )
9/tile_mode = 2
9/autotile/icon_coordinate = Vector2( 0, 0 )
9/autotile/tile_size = Vector2( 24, 24 )
9/autotile/spacing = 2
9/autotile/occluder_map = [  ]
9/autotile/navpoly_map = [  ]
9/autotile/priority_map = [  ]
9/autotile/z_index_map = [  ]
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0

[node name="Enemy" type="Area2D" groups=[
"monsters",
]]
z_index = -20
script = ExtResource( 2 )

[node name="RedDemon" type="TileMap" parent="."]
visible = false
use_parent_material = true
position = Vector2( 20, 20 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 131073 )

[node name="RedDemonCorpse" type="TileMap" parent="."]
visible = false
use_parent_material = true
position = Vector2( 20, 20 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 720896 )

[node name="PurpleMage" type="TileMap" parent="."]
visible = false
use_parent_material = true
position = Vector2( 20, 20 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 393227 )

[node name="PurpleMageCorpse" type="TileMap" parent="."]
visible = false
use_parent_material = true
position = Vector2( 20, 20 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 720909 )

[node name="BlueBlob" type="TileMap" parent="."]
visible = false
use_parent_material = true
position = Vector2( 20, 20 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 655374 )

[node name="BlueBlobCorpse" type="TileMap" parent="."]
visible = false
use_parent_material = true
position = Vector2( 20, 20 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 720903 )

[node name="OrangeSkel" type="TileMap" parent="."]
visible = false
use_parent_material = true
position = Vector2( 20, 20 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 655368 )

[node name="OrangeSkelCorpse" type="TileMap" parent="."]
visible = false
use_parent_material = true
position = Vector2( 20, 20 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 720914 )

[node name="AsleepText" type="Label" parent="."]
margin_left = 32.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 22.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0.52549 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Zzz"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 18.0
rect_scale = Vector2( 0.75, 0.75 )
value = 100.0
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
